[package]
name = "wheel-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
async_zip = { version = "0.0.17", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
destream_json = "0.13.0"
futures = "0.3.31"
futures-util = "0.3.31"
http = { version = "1.1.0", optional = true }
lazy_static = "1.5.0"
monoio = { version = "0.2.4", optional = true }
opendal = { version = "0.50.2", features = [
    "layers-tracing",
    "services-http",
    "services-monoiofs",
] }
regex = "1.11.1"
tokio = { version = "1.41.1", optional = true }
tokio-util = { version = "0.7.12", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
url = "2.5.4"

[features]
tokio = [
    "dep:tokio",
    "tokio/io-std",
    "tokio/macros",
    "tokio/rt",
    "tokio/rt-multi-thread",
    "tokio-util",
]
monoio = ["dep:monoio", "dep:http"]
default = ["monoio"]
